# oijalgorithms

./: 404.html  CHANGELOG.md  README.md  index.html  index.md  mkdocs.yml  pyproject.toml  setup.py  test.py
docs/: documentation.md  index.md
documentation/: index.html
oijalgorithms/: __init__.py  funkcje.py
search/: search_index.json
src/: cfunkcje.c
workflows/: run_tests.yml
