[project]
name = "oijalgorithms"
description = "My first package made for learning programming for the Polish Junior Olympiad"
version = "2.0"
authors = [
    { name="Ignacy Stępniewski", email="stepniewskiigni@gmail.com" },
]
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0"
]

[build-system]
requires = [
    "numpy>=2.0.0",
    "setuptools"
]
